--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=Farmtuntic
 APP_ENV=local
 APP_KEY=base64:p1JSV0UQFLU3VyrJXI05+e0S9veVz2TrPiIlxGCsALg=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost/farmtuntic/public
 
 LOG_CHANNEL=stack
 
@@ -24,13 +24,21 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_USERNAME=farmtastic.tn@gmail.com
+MAIL_PASSWORD=@Safa07984394
+MAIL_ENCRYPTION=ssl
 MAIL_FROM_NAME="${APP_NAME}"
+
+#MAIL_DRIVER=smtp
+#MAIL_HOST=smtp.mailtrap.io
+#MAIL_PORT=2525
+#MAIL_USERNAME=null
+#MAIL_PASSWORD=null
+#MAIL_ENCRYPTION=null
+#MAIL_FROM_ADDRESS=null
+#MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
